--- a/transform/models/takehome-test-submission/q1.yml
+++ b/transform/models/takehome-test-submission/q1.yml
@@ -3,7 +3,7 @@ models:
     description: >
       Answer to Q1 of take home test
     meta:
-      owner: lyzhou717@gmail.com
+      owner: candidate@foodpanda.com
     columns:
       - country_name
         description: Name of country.
