--- a/transform/models/takehome-test-submission/q2.yml
+++ b/transform/models/takehome-test-submission/q2.yml
@@ -3,7 +3,7 @@ models:
     description: >
       Answer to Q2 of take home test
     meta:
-      owner: lyzhou717@gmail.com
+      owner: candidate@foodpanda.com
     columns:
       - vendor_name
         description: Name of vendor.
