--- a/transform/models/takehome-test-submission/q4.yml
+++ b/transform/models/takehome-test-submission/q4.yml
@@ -3,7 +3,7 @@ models:
     description: >
       Answer to Q4 of take home test
     meta:
-      owner: lyzhou717@gmail.com
+      owner: candidate@foodpanda.com
     columns:
       - year
         description: Year of data.
